# rust-kill-process

./: Cargo.toml  README.md  package.json
npm/: getBinary.js
src/: lib.rs  main.rs
